# cs4560_fencing

./: .clangd  .envrc  .gitignore  CMakeLists.txt  HelloPass.cpp  LICENSE  README.md  a.out  main.c  test.bc  test.cpp  test.ll
fencing/: CMakeLists.txt  FenceOptimization.cpp  FencePSO.cpp  FenceTSO.cpp  FencingPasses.cpp  FencingPasses.h  Skeleton.cpp
litmus_tests/: .gitignore  Makefile  core  example_program.cpp  fenced_lb.ll  fenced_lb_out.txt  iriw.bc  iriw.cpp  iriw.ll  lb.bc  lb.cpp  lb.ll  lb_fenced.ll  mp.bc  mp.cpp  mp.ll  sb.bc  sb.cpp  sb.ll
llvm/include/llvm/Transforms/Utils/: FenceOptimizationPassProject.h  FencePSO.h  FenceTSO.h
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/Utils/: CMakeLists.txt  FenceOptimizationPassProject.cpp  FencePSO.cpp  FenceTSO.cpp
tests/: branch_tso.ll  iriw_pso.ll  iriw_tso.ll  lb_pso.ll  lb_tso.ll  lit.cfg.py  mp_pso.ll  mp_tso.ll  sb_pso.ll  sb_tso.ll
